# operating_system

./: Cargo.toml  Makefile  README.md  idea.txt  modularization.md  plan.md
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
documentation/: filesystem.md  notes.md
src/: disk.asm  gdt.rs  main.rs  vga.rs
src/crypt/: aes.rs  mod.rs
src/error/: error.rs  mod.rs
src/file/: bus.rs  dev.rs  disk.rs  fat32.rs  fs.rs  mod.rs  old_pci.rs  pci.rs  pipe.rs
src/interrupts/: interrupts.rs  keyboard.rs  mod.rs
src/memory/: allocator.rs  kernel_info.rs  mod.rs
src/process/: mod.rs
src/syscall/: syscall.c
src/test/: mod.rs  serial.rs
src/time/: clock.rs  mod.rs  timestruct.rs
user/: hello
