[package]
name = "operating_system"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # Add the device used to tell QEMU to exit
    "-serial", "stdio", # Allow serial for pritning to host console
    #"-display", "none", # Don't show QEMU
]
test-success-exit-code = 33
test-timeout = 300

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
spin = "0.9.8"
x86 = "0.52.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[dev-dependencies]
uart_16550 = "0.2.0"
