[package]
name = "operating_system"
version = "0.1.0"
edition = "2018"
default-run = "operating_system"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # Add the device used to tell QEMU to exit
    "-serial", "stdio", # Allow serial for pritning to host console
    "-display", "none", # Don't show QEMU
]
test-success-exit-code = 33
test-timeout = 300

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] } # TODO: Update this dependency
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
object = { version = "0.36.4", default-features = false, features = ["read"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
x86_64 = "0.15.1"

[dev-dependencies]
uart_16550 = "0.3.1"
